fix load bar size issue on mobile site

--- a/src/main/webapp/static/css/layout-mobile.css
+++ b/src/main/webapp/static/css/layout-mobile.css
@@ -105,6 +105,7 @@ body {
 .overthrow-enabled .rightcol {
 	max-height: 100%;
 	max-width: 100%;
+	width: 90%;
 }
 
 .rightcol {
